examples/misc/error/compilation/module_import-rec_1.bfml
open import "../compilation/./module_import-rec_2.bfml"

let main = []